# ds-u2-actividad-1-listasenlazadassimples-GeorginaRetaLimas

./: CMakeLists.txt  README.md
SimuladorSensores/: SimuladorSensores.ino
arduino/: SimuladorSensores.ino
docs/: Doxyfile  Doxyfile.html
docs/html/: GestorSensores_8h.html  GestorSensores_8h__dep__incl.map  GestorSensores_8h__dep__incl.md5  GestorSensores_8h__incl.map  GestorSensores_8h__incl.md5  GestorSensores_8h_source.html  ListaSensor_8h.html  ListaSensor_8h__dep__incl.map  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.map  ListaSensor_8h__incl.md5  ListaSensor_8h_source.html  SensorBase_8h.html  SensorBase_8h__dep__incl.map  SensorBase_8h__dep__incl.md5  SensorBase_8h__incl.map  SensorBase_8h__incl.md5  SensorBase_8h_source.html  SensorPresion_8h.html  SensorPresion_8h__dep__incl.map  SensorPresion_8h__dep__incl.md5  SensorPresion_8h__incl.map  SensorPresion_8h__incl.md5  SensorPresion_8h_source.html  SensorTemperatura_8h.html  SensorTemperatura_8h__dep__incl.map  SensorTemperatura_8h__dep__incl.md5  SensorTemperatura_8h__incl.map  SensorTemperatura_8h__incl.md5  SensorTemperatura_8h_source.html  annotated.html  classGestorSensores-members.html  classGestorSensores.html  classGestorSensores__coll__graph.map  classGestorSensores__coll__graph.md5  classListaSensor-members.html  classListaSensor.html  classListaSensor__coll__graph.map  classListaSensor_a11f84bbbda6299d28a3018eefeeb5a02_icgraph.map  classListaSensor_a11f84bbbda6299d28a3018eefeeb5a02_icgraph.md5  (+79 more)
docs/html/search/: all_0.js  all_2.js  all_5.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  classes_0.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js
docs/latex/: GestorSensores_8h.tex  GestorSensores_8h__dep__incl.md5  GestorSensores_8h__incl.md5  GestorSensores_8h_source.tex  ListaSensor_8h.tex  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.md5  ListaSensor_8h_source.tex  SensorBase_8h.tex  SensorBase_8h__dep__incl.md5  SensorBase_8h__incl.md5  SensorBase_8h_source.tex  SensorPresion_8h.tex  SensorPresion_8h__dep__incl.md5  SensorPresion_8h__incl.md5  SensorPresion_8h_source.tex  SensorTemperatura_8h.tex  SensorTemperatura_8h__dep__incl.md5  SensorTemperatura_8h__incl.md5  SensorTemperatura_8h_source.tex  annotated.tex  classGestorSensores.tex  classGestorSensores__coll__graph.md5  classListaSensor.tex  classListaSensor__coll__graph.md5  classListaSensor_a11f84bbbda6299d28a3018eefeeb5a02_icgraph.md5  classListaSensor_a19bd2eacef34c5e0c2fc6ba142138dcd_icgraph.md5  classListaSensor_a2dd75ef08cf9a41dc12886b45aa0571e_icgraph.md5  classListaSensor_a6eb996057c9c1feabb5ac94a4fb4c69b_icgraph.md5  classListaSensor_a9cd368481187ad8a4faf79db7810086b_icgraph.md5  classListaSensor_af38b54d48067b68b06a0e9d31b93c4a7_icgraph.md5  classSensorBase.tex  classSensorBase__inherit__graph.md5  classSensorBase_a7cf3aeb12b330c500e2a5136fa020eec_icgraph.md5  classSensorBase_a7fbc0a5b444f7d16cd60ba873b8ec8e4_icgraph.md5  classSensorBase_adb19329ba35a359c664b66575aab7552_icgraph.md5  classSensorBase_adfcce9176e571b524e9cd03e507e94d4_icgraph.md5  classSensorPresion.tex  classSensorPresion__coll__graph.md5  classSensorPresion__inherit__graph.md5  (+23 more)
include/: GestorSensores.h  ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h
src/: main.cpp
